# advent_of_code_2023

./: .gitignore  .pre-commit-config.yaml  new_puzzle.bat  pyproject.toml
day_1/: part_1.py  part_2.py
day_1/tests/: test_part_1.py  test_part_2.py
src/day_1/: part_1.py  part_2.py
src/day_2/: part_1.py  part_2.py
src/day_3/: part_1.py  part_2.py
src/day_4/: part_1.py  part_2.py
src/day_5/: part_1.py  part_2.py
src/utils/: io.py  paths.py
tests/day_1/: test_part_1.py  test_part_2.py
tests/day_2/: test_part_1.py  test_part_2.py
tests/day_3/: test_part_1.py  test_part_2.py
tests/day_4/: test_part_1.py  test_part_2.py
tests/day_5/: test_part_1.py  test_part_2.py
utils/: io.py
